# rust-grpc-client-and-server

./: Cargo.toml  README.md
local-client/: Cargo.toml  build.rs
local-client/src/: client.rs
local-server/: Cargo.toml  build.rs
local-server/proto/: producer.proto
local-server/src/: server.rs
proto/: local.proto
shared-proto/: Cargo.toml  build.rs
shared-proto/src/: lib.rs
yellowstone-client/: Cargo.toml
yellowstone-client/src/: client.rs
