[workspace]
resolver = "2"
members = [
    "yellowstone-client",
    "shared-proto",
    "local-client",
		"local-server"
]

[workspace.package]
authors = ["impin2rex"]
edition = "2021"
homepage = "https://impin2rex.github.io"
repository = "https://github.com/impin2rex/rust-grpc-client-and-server"
license = "ISC"
keywords = ["solana"]
publish = false

[workspace.dependencies]
tonic = "0.11"
tokio = "1"
chrono = "0.4.41"
futures = "0.3.31"
tokio-stream = "0.1.17"
