[package]
name = "local-client"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Yellowstone gRPC Geyser Plugin"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }


[[bin]]
name = "local-client"
path = "src/client.rs"

[dependencies]
tonic = { workspace = true, features = ["tls"] }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }
futures = { workspace = true }
prost = "0.12"
prost-types = "0.14.1"

[build-dependencies]
tonic-build = "0.11"
