[package]
name = "local-server"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Yellowstone gRPC Geyser Plugin"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[[bin]]
name = "local-server"
path = "src/server.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
futures = { workspace = true }
tonic = { workspace = true }
prost = "0.12"
chrono = { workspace = true }
env_logger = "0.10"

[build-dependencies]
tonic-build = "0.11"
