[package]
name = "shared-proto"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Yellowstone gRPC Geyser Plugin"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[dependencies]
tonic = { workspace = true }
prost = "0.12"
prost-types = "0.14.1"

[build-dependencies]
tonic-build = "0.11"